Update Issue 2135
Optimizes FT Timers replicated data and serialization tasks.

git-svn-id: https://mobicents.googlecode.com/svn/branches/servers/cluster/2.x@15625 bf0df8d0-2c1f-0410-b170-bd30377b63dc